# chatgpt_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: basic.rs  basic_messaging.rs  bin_persistence.rs  conversation.rs  conversation_directed.rs  example_conversation.json  function_calls.rs  json_persistence.rs  proxying.rs  streamed.rs  streamed_conversation.rs
fn_macros/: Cargo.toml
fn_macros/src/: lib.rs  proc.rs
fn_macros/src/proc/: attr.rs
fn_macros/tests/: Cargo.toml
fn_macros/tests/src/: lib.rs
src/: auth.rs  chatgpt.rs  client.rs  config.rs  converse.rs  err.rs  functions.rs  lib.rs  prelude.rs  types.rs
src/auth/: simple.rs
src/auth/simple/: evade.rs
src/auth/simple/evade/: LICENSE  README.md  chrome.app.js  chrome.csi.js  chrome.loadTimes.js  chrome.runtime.js  iframe.contentWindow.js  media.codecs.js  navigator.hardwareConcurrency.js  navigator.languages.js  navigator.permissions.js  navigator.plugins.js  navigator.vendor.js  navigator.webdriver.js  utils.js  webgl.vendor.js  window.outerdimensions.js
src/functions/: traits.rs  types.rs
