[package]
name = "chatgpt_blocking_rs"
version = "0.1.0"
edition = "2021"
description = "Blocking ChatGPT API Wrapper"
authors = ["Hyde45 <denis.heid@protonmail.com", "Maxuss <maxus.info.mail@proton.me>"]
license = "MIT"
repository = "https://github.com/Hyde46/chatgpt_rs_blocking"
keywords = ["ChatGPT", "OpenAI"]
categories = ["api-bindings"]

[lib]
name = "chatgpt"
path = "./src/chatgpt.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.6.2", features = ["json"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93", optional = true }
thiserror = "1.0.38"
url = "2.3.1"
chrono = "0.4.23"
postcard = { version = "1.0.4", features = ["alloc"], optional = true }
h2 = "0.3.20"