[package]
name = "chatgpt_rs"
version = "1.2.3"
edition = "2021"
description = "ChatGPT API Wrapper"
authors = ["Maxuss <maxus.info.mail@proton.me>"]
license = "MIT"
repository = "https://github.com/Maxuss/chatgpt_rs"
keywords = ["ChatGPT", "OpenAI"]
categories = ["api-bindings"]

[lib]
name = "chatgpt"
path = "./src/chatgpt.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = [
    "json",
    "rustls-tls",
], default-features = false }
tokio = { version = "1.35.1", features = ["macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", optional = true }
thiserror = "1.0.48"
url = { version = "2.4.1", features = ["serde"] }
derive_builder = "0.12.0"


postcard = { version = "1.0.7", features = ["alloc"], optional = true }
eventsource-stream = { version = "0.2.3", optional = true }
futures = { version = "0.3.28", optional = true }
futures-util = { version = "0.3.28", optional = true }
gpt_fn_macros = { path = "./fn_macros", version = "1.0.0", optional = true }
schemars = { version = "0.8.13", optional = true }
async-trait = { version = "0.1.73", optional = true }
async-recursion = { version = "1.0.5", optional = true }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
chatgpt_rs = { path = ".", features = [
    "json",
    "streams",
    "postcard",
    "functions",
] }
lazy_static = "1.4.0"

[features]
default = ["json"]
streams = ["dep:eventsource-stream", "dep:futures-util", "dep:futures", "reqwest/stream"]
functions = ["dep:gpt_fn_macros", "dep:schemars", "dep:async-trait", "dep:serde_json", "dep:async-recursion"]
functions_extra = ["schemars/chrono", "schemars/url", "schemars/uuid1", "schemars/either"]
json = ["dep:serde_json", "tokio/fs"]
postcard = ["dep:postcard", "tokio/fs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
