[package]
name = "gpt_fn_macros"
version = "1.0.0"
edition = "2021"
description = "Macros for the ChatGPT-rs crate"
authors = ["Maxuss <maxus.info.mail@proton.me>"]
license = "MIT"
repository = "https://github.com/Maxuss/chatgpt_rs"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.3"
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = "2.0.27"
